# purets-linter

./: .gitignore  Cargo.toml  README.md  deno.jsonc  foo_test.ts  package.json  rules.md  test.sh  test_tsconfig_invalid.json  test_tsconfig_valid.json  todo.md  tsconfig.json
.github/workflows/: ci.yml
benches/: linter_bench.rs
examples/: check.ts  index.ts  main.ts  package.json  test-expect-console.ts  test-expect-error.ts  test-expect-simple.ts
examples/deno-test/: add_test.ts
examples/errors/: NetworkError.ts
examples/io/: fetchData.ts  main.ts  readFile.ts  readFileSync.ts
examples/node-test/: add_test.ts
examples/pure/: add_test.ts  distance.ts  distance_test.ts
examples/src/: index.ts
examples/tests/: add.test.ts
examples/types/: Point.ts  User.ts
examples/vitest/: add_test.ts
src/: combined_visitor.rs  disable_directives.rs  expect_error_directives.rs  gitignore_filter.rs  init.rs  lib.rs  main.rs  package_checker.rs  package_json_validator.rs  presets.rs  rules.rs  test_runner.rs  test_runner_detector.rs  test_utils.rs  tsconfig_validator.rs  workspace_detector.rs
src/comparer/: analyzer.rs  metrics.rs  mod.rs
src/rules/: allow_directives.rs  catch_error_handling.rs  empty_array_requires_type.rs  export_const_type_required.rs  export_requires_jsdoc.rs  filename_function_match.rs  forbidden_libraries.rs  (+40 more)
test_files/: test_class.ts  test_delete.ts  test_enum.ts  test_foreach.ts  test_getters_setters.ts  test_import_extensions.ts  test_member_assignment.ts  test_multiple_exports.ts  test_namespace_import.ts  test_reexport.ts  test_return_value.ts  test_side_effects.ts  test_this.ts  test_throw.ts  test_unused_imports.ts  test_unused_variables.ts  valid.ts
testapp/: package.json  tsconfig.json
testapp2/: package.json  tsconfig.json
tests/: README.md
(+36 files in other folders)
