[package]
name = "pure-ts"
version = "0.1.0"
edition = "2021"

[lib]
name = "pure_ts"
path = "src/lib.rs"

[[bin]]
name = "pure-ts"
path = "src/main.rs"

[dependencies]
oxc_parser = "0.30.0"
oxc_ast = "0.30.0"
oxc_span = "0.30.0"
oxc_allocator = "0.30.0"
oxc_diagnostics = "0.30.0"
oxc_syntax = "0.30.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "linter_bench"
harness = false
