[package]
edition = "2021"
name = "purets"
version = "0.1.0"

[lib]
name = "purets"
path = "src/lib.rs"

[[bin]]
name = "purets"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5", features = ["derive"]}
colored = "2.1"
glob = "0.3"
oxc = { version = "0.87.0", features = ["ast_visit"] }
rayon = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "linter_bench"
